Fix archetype grid image misalignment

--- a/style.css
+++ b/style.css
@@ -71,6 +71,8 @@ nav {
 .card {
     max-width: 250px;
     text-align: center;
+    display: flex;
+    flex-direction: column;
 }
 
 .card img {
